--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.5.4
+  firebase_core:
+  firebase_auth:
+  email_auth: ^1.0.0
   get: ^4.6.5
+  pinput: ^2.2.12
   flutter_otp_text_field: ^1.1.1
 
 dev_dependencies:
